[package]
name = "simple-retro-td"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_embedded_assets = "0.11.0"
bevy_kira_audio = "0.20.0"
log = { version= "0.4", features= ["release_max_level_off"]}

[dependencies.bevy]
version = "0.14.0"
features = ["bevy_asset", "bevy_winit", "bevy_core_pipeline", "bevy_sprite", "bevy_text", "bevy_ui", "multi_threaded", "png", "vorbis", "x11", "default_font", "webgl2"]

[workspace]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

